--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
-/** {
-	border: 1px solid red;
-}*/
+* {
+	/*border: 1px solid red;*/
+	line-height: 1.5em;
+}
 /*************************************
 	Top part (Header and Nav)
 *************************************/
-.top {
+.top-bar, .top, .bottom {
 	display: flex;
 	flex-direction: row;
 	margin: 0 124px 0 124px;
@@ -36,66 +37,66 @@ nav li a {
 }
 
 /*************************************
-	Main Content
+	Similar Duo 
 *************************************/
 .similar-main {
-	display: flex;
-	flex-direction: row;
+	margin: 0 124px 0 124px;
+	display: grid;
+}
+.hide-to-start {
+	display: none;
+}
+.similar-start {
+	margin-left: 236px;
+}
 
+section img {
+	float:left;
 }
 .sect {
-	margin: 12px;
-	flex-basis: 33%;
-	flex-grow: 0;
-}
-.sect-right {
-	margin-right: 124px;
-}
-.sect-left {
-	margin-left: 124px;
-}
-button {
-	margin-top: 124px;
-	border-radius: 12px;
-	background-color: red;
-	width: 100%;
-	height: 20%;
-}
-.sect-right li {
-	padding-top: 12px;
-	padding-bottom: 12px;
-}
-.link-to-odd {
-	margin-top: 124px;
-	border-radius: 12px;
-	background-color: red;
-}
-
-.diff-intro {
-	float: left;
-	margin: 0 24px 24px 12px;
-}
-.test {
-	padding-top:50px;
-}
-.bottom-section {
 	display: flex;
 	flex-direction: row;
-	align-content: center;
-	width: 100%;
 }
-.bottom-section section, .bottom-section a {
+button {
+	border-radius: 12px;
+	background-color: red;
+	width: 100%;
+	height: 100%;
+}
+.sect section, .sect a {
 	flex-basis: 50%;
 	flex-grow: 0;
 }
-.bottom-section button {
-	margin: 0;
-	height: 100%;
-}
-.diff-main {
-	margin: 0 124px 0 124px;
+
+.sect li {
+	padding-top: 12px;
+	padding-bottom: 12px;
 }
 
+/*************************************
+	Odd One Out
+*************************************/
+.big {
+	flex-basis: 60%;
+	flex-grow: 0;
+}
+.small {
+	flex-basis: 40%;
+	flex-grow: 0;
+}
+.small button {
+	height: 50%;
+}
+.odd-center-image {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width:40%;
+}
+
+section {
+	padding: 40px;
+}
 
 
 
