--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 * {
 	/*border: 1px solid red;*/
 	line-height: 1.5em;
+	background-color: #F0EAD6;
 }
 /*************************************
 	Top part (Header and Nav)
@@ -11,7 +12,12 @@
 	margin: 0 124px 0 124px;
 }
 
+.bottom {
+	margin:0;
+}
+
 nav {
+	padding-top: 10px;
 	align-items: center;
 }
 nav ul {
@@ -39,7 +45,7 @@ nav li a {
 /*************************************
 	Similar Duo 
 *************************************/
-.similar-main {
+main {
 	margin: 0 124px 0 124px;
 	display: grid;
 }
@@ -58,8 +64,9 @@ section img {
 	flex-direction: row;
 }
 button {
+	font-size: 24px;
 	border-radius: 12px;
-	background-color: red;
+	background-color: #BD3D3A;
 	width: 100%;
 	height: 100%;
 }
@@ -84,9 +91,12 @@ button {
 	flex-basis: 40%;
 	flex-grow: 0;
 }
-.small button {
-	height: 50%;
+.small ol {
+	padding-top: 50px;
 }
+/*.small button {
+	height: 50%;
+}*/
 .odd-center-image {
 	display: block;
 	margin-left: auto;
@@ -98,8 +108,9 @@ section {
 	padding: 40px;
 }
 
-
-
+.diffs {
+	margin-top: 40px;
+}
 
 
 
