--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 * {
 	/*border: 1px solid red;*/
 	line-height: 1.5em;
+	background-color: #F0EAD6;
 }
 /*************************************
 	Top part (Header and Nav)
@@ -12,6 +13,7 @@
 }
 
 nav {
+	padding-top: 10px;
 	align-items: center;
 }
 nav ul {
@@ -58,8 +60,9 @@ section img {
 	flex-direction: row;
 }
 button {
+	font-size: 24px;
 	border-radius: 12px;
-	background-color: red;
+	background-color: #BD3D3A;
 	width: 100%;
 	height: 100%;
 }
@@ -84,9 +87,12 @@ button {
 	flex-basis: 40%;
 	flex-grow: 0;
 }
-.small button {
-	height: 50%;
+.small ol {
+	padding-top: 50px;
 }
+/*.small button {
+	height: 50%;
+}*/
 .odd-center-image {
 	display: block;
 	margin-left: auto;
@@ -98,8 +104,9 @@ section {
 	padding: 40px;
 }
 
-
-
+.diffs {
+	margin-top: 40px;
+}
 
 
 
