--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,15 +1,11 @@
+/****************************
+	Menu Module
+*****************************/
 .menu ul{
 	list-style-type: none;
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
-
-}
-
-.menu li{
-	border: none;
-	border-width: 1px;
-	background-color: white;
 }
 
 .menu a{
@@ -20,10 +16,4 @@
 .menu a.is-current{
 	background-color: #BD3D3A;
 	color: white;
-}
-
-
-@media (max-width: 600px) {
-	nav.menu ul, nav.menu li { display: block } 
-
 }
